Agregue el maquetado del ejercicio, faltarian pulir algunos detalles visuales

--- a/index.html
+++ b/index.html
@@ -16,16 +16,23 @@
     <title>Reloj - Ejercicio 4</title>
   </head>
   <body>
-    <header>
-
-    </header>
-    <main>
+    <main class="">
+      <section class="text-center py-5 text-light">
+        <article class="cuadroFecha mx-5 my-2 p-3">
+          <h1>Lunes 3 de Abril del 2023</h1>
+        </article>
+        <article class="cuadroHora row mx-5">
+          <div class="col-8 hour text-end">
+            <p>18:48:</p>
+          </div>
+          <div class="col-4 pmSegundos text-start py-4">
+              <p class="">PM</p>
+              <p class="">58</p>
+          </div>
+        </article>
+      </section>
       
     </main>
-    <footer class="bg-dark text-light py-3 text-center">
-      <p>&copy; Todos los derechos reservados</p>
-    </footer>
-
     <script src="/js/app.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
