La pagina ya es responsive, falta unicamente la logica

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <title>Reloj - Ejercicio 4</title>
   </head>
   <body>
-    <main class="">
-      <section class="text-center py-5 text-light">
+    <main>
+      <section class="text-center text-light container contenido">
         <article class="cuadroFecha mx-5 my-2 p-3">
           <h1>Lunes 3 de Abril del 2023</h1>
         </article>
         <article class="cuadroHora row mx-5">
-          <div class="col-8 hour text-end">
+          <div class="col-8 hour text-end pt-3">
             <p>18:48:</p>
           </div>
           <div class="col-4 pmSegundos text-start py-4">
@@ -31,7 +31,6 @@
           </div>
         </article>
       </section>
-      
     </main>
     <script src="/js/app.js"></script>
     <script
