Agregue la logica, todo funciona bien

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
     <main>
       <section class="text-center text-light container contenido">
         <article class="cuadroFecha mx-5 my-2 p-3">
-          <h1>Lunes 3 de Abril del 2023</h1>
+          <h1 id="actualizarFecha"></h1>
         </article>
         <article class="cuadroHora row mx-5">
           <div class="col-8 hour text-end pt-3">
-            <p>18:48:</p>
+            <p id="actualizarHora"></p>
           </div>
           <div class="col-4 pmSegundos text-start py-4">
-              <p class="">PM</p>
-              <p class="">58</p>
+              <p id="ampm"></p>
+              <p id="actualizarSegundos"></p>
           </div>
         </article>
       </section>
