--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Quipildor Leandro" />
-    <meta name="description" content="aprendiendo js - tp-5 - Practica DOM y BOM" />
+    <meta
+      name="description"
+      content="aprendiendo js - tp-5 - Practica DOM y BOM"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -26,8 +29,8 @@
             <p id="actualizarHora"></p>
           </div>
           <div class="col-4 pmSegundos text-start py-4">
-              <p id="ampm"></p>
-              <p id="actualizarSegundos"></p>
+            <p id="ampm"></p>
+            <p id="actualizarSegundos"></p>
           </div>
         </article>
       </section>
